--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Sumer Saran Aligh</title>
+    <meta name="description" content="Sumer Saran Aligh's Portfolio - Full Stack Developer">
+    <meta name="keywords" content="Sumer Saran Aligh, Full Stack Developer, Portfolio, React, Node.js">
+    <meta name="author" content="Sumer Saran Aligh">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
