--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://i.pinimg.com/736x/0f/8b/28/0f8b2870896edcde8f6149fe2733faaf.jpg" />
+    <link rel="icon" href="https://logopond.com/logos/b4f4918b027ac2801e051ef9f44b44c9.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Sumer Saran Aligh's Portfolio - Full Stack Developer, Visit today to know more about me and my work."
     />
     <link rel="apple-touch-icon" href="https://logopond.com/logos/b4f4918b027ac2801e051ef9f44b44c9.png" />
     <!--
@@ -29,6 +29,13 @@
     <meta name="keywords" content="Sumer Saran Aligh, Full Stack Developer, Portfolio, React, Node.js">
     <meta name="author" content="Sumer Saran Aligh">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+
+    <meta property="og:title" content="Sumer Saran Aligh's Portfolio" />
+    <meta property="og:description" content="Sumer Saran Aligh's Portfolio - Full Stack Developer" />
+    <meta property="og:image" content="https://logopond.com/logos/b4f4918b027ac2801e051ef9f44b44c9.png" />
+    <meta property="og:url" content="https://sumersaranaligh.xyz" />
+    <meta property="og:type" content="website" />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
